# tradingview-mcp

./: .env.example  README.md  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-06-03-yt-to-backtest-mcp.md  2026-06-07-tv-browser-control.md
docs/superpowers/specs/: 2026-06-03-yt-to-backtest-mcp-design.md  2026-06-04-tv-browser-control-design.md
src/tradingview_mcp/: server.py
src/tradingview_mcp/core/: errors.py
src/tradingview_mcp/core/services/tv_browser/: __init__.py  alerts.py  browser.py  chart.py  data.py  debug.py  exceptions.py  modals.py  pine.py  selectors.py  session.py  symbols.py  throttle.py  watchlists.py
src/tradingview_mcp/core/services/yt_strategy/: __init__.py  autotune.py  codegen.py  data.py  rule_extractor.py  runner.py  storage.py  transcript.py  walkforward.py
tests/fixtures/: synthetic_ohlcv.csv
tests/fixtures/fake_tv/: README.md
tests/fixtures/strategies/: bbands.py  rsi_oscillator.py  sma_cross.py
tests/integration/: test_yt_mcp_tools.py
tests/integration/tv_browser/: test_mcp_tools.py
tests/unit/tv_browser/: test_alerts.py  test_browser.py  test_chart.py  test_data.py  test_debug.py  test_errors.py  test_exceptions.py  test_modals.py  test_pine.py  test_selectors_pinned.py  test_session.py  test_symbols.py  test_throttle.py  test_watchlists.py  test_wrapper_invariants.py
tests/unit/yt_strategy/: test_autotune.py  test_codegen.py  test_data.py  test_errors.py  test_rule_extractor.py  test_runner_integration.py  test_runner_sandbox.py  test_storage.py  test_transcript.py  test_walkforward.py
