[project]
name = "tradingview-mcp-server"
version = "0.7.1"
description = "Advanced AI Trading Intelligence Framework — MCP server with walk-forward backtesting, trade logs, equity curves, 1h timeframe, sentiment, Yahoo Finance, and 30+ technical analysis tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Atila Ahmettaner" }
]
urls = { Repository = "https://github.com/atilaahmettaner/tradingview-mcp" }
keywords = ["mcp", "tradingview", "crypto", "technical analysis", "screener", "backtesting", "walk-forward", "sentiment", "yahoo-finance", "trading", "agents", "algorithmic-trading", "equity-curve"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "feedparser>=6.0.12",
  "mcp[cli]>=1.12.0",
  "requests>=2.32",
  "tradingview-screener>=0.6.4",
  "tradingview-ta>=3.3.0",
  "backtesting>=0.3.3",
  "youtube-transcript-api>=0.6.2",
  "yt-dlp>=2025.01.01",
  "ta>=0.11.0",
  "scikit-optimize>=0.10.0",
  "Pillow>=10",
  "pandas>=2.0",
  "numpy>=1.24",
  "playwright>=1.40",
]

[project.scripts]
# Entry point now points to packaged module
tradingview-mcp = "tradingview_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tradingview_mcp = ["coinlist/*.txt"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-mock>=3.12",
    "requests-mock>=1.12",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-playwright>=0.5",
    "aiohttp>=3.9",
    "freezegun>=1.4",
]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
